<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="@dimen/_20sdp"
    android:layout_marginRight="@dimen/_20sdp"
    android:background="@drawable/custom_login_dialog_bg"
    android:minHeight="@dimen/_100sdp"
    android:minWidth="@dimen/_100sdp"
    android:orientation="vertical">

    <LinearLayout
        android:padding="@dimen/_10sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_cstm_msg_txt"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="@dimen/_10sdp"
            android:text="@string/forgot_dialog_txt"
            android:textAllCaps="false"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etForgotEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_et_bg_with_border"
            android:hint="@string/et_forgot_dialog_hint"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:nextFocusForward="@+id/etLoginPassword"
            android:paddingLeft="@dimen/_7sdp"
            android:textColorHint="@color/colorGrey" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnForgotOk"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="0.50"
                android:background="@drawable/rect_btn_bg"
                android:text="@string/btn_forgot_ok"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnForgotCancel"
                android:layout_width="0dp"
                android:layout_height="@dimen/btn_height"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_5sdp"
                android:layout_weight="0.50"
                android:background="@drawable/rect_btn_bg"
                android:text="@string/btn_forgot_cancel"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>