<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorWhite"
    tools:context="com.js.jainsamaj.activities.OtpActivity">

    <include layout="@layout/app_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            app:hintTextAppearance="@style/TextInputLayout">

            <EditText
                android:id="@+id/etOTP"
                style="@style/JSEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/_5sdp"
                android:hint="@string/otp_hint"
                android:imeOptions="actionNext"
                android:inputType="number" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:hintTextAppearance="@style/TextInputLayout">

                <EditText
                    android:id="@+id/etNewPass"
                    style="@style/JSEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_5sdp"
                    android:hint="@string/otp_ed_new_hint"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:hintTextAppearance="@style/TextInputLayout">

                <EditText
                    android:id="@+id/etConfirmPass"
                    style="@style/JSEditTextStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/_5sdp"
                    android:hint="@string/otp_ed_confirm_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnResend"
                style="@style/JSButtonStyle"
                android:layout_width="0dp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_weight="0.5"
                android:text="@string/otp_btn_resend" />

            <Button
                android:id="@+id/btnSubmit"
                style="@style/JSButtonStyle"
                android:layout_width="0dp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_weight="0.5"
                android:text="@string/otp_btn_submit" />

        </LinearLayout>


    </LinearLayout>
</LinearLayout>
