<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.js.jainsamaj.fragments.NotificationWallFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/edOldPassword"
                        style="@style/JSEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableLeft="@drawable/ic_password_new"
                        android:hint="@string/old_password"
                        android:drawableTint="@color/nav_tint_color"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/edNewPassword"
                        style="@style/JSEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableLeft="@drawable/ic_password_new"
                        android:hint="@string/new_password"
                        android:drawableTint="@color/nav_tint_color"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    app:hintTextAppearance="@style/TextInputLayout">

                    <EditText
                        android:id="@+id/edConfirmNewPassword"
                        style="@style/JSEditTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="@dimen/_5sdp"
                        android:drawableLeft="@drawable/ic_password_new"
                        android:hint="@string/confirm_new_password"
                        android:drawableTint="@color/nav_tint_color"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword" />
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnChangePassword"
                    style="@style/JSButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/change_password" />

            </LinearLayout>


            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/sdAboutBanner"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
                fresco:placeholderImage="@color/colorWhite" />

        </LinearLayout>
    </FrameLayout>

</LinearLayout>
